imports min_width_414px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -24,6 +24,7 @@
 @import './min_width_350px';
 @import './min_width_375px';
 @import './min_width_411px';
+@import './min_width_414px';
 
 *{
     box-sizing: border-box;
