--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -25,6 +25,7 @@
 @import './min_width_375px';
 @import './min_width_411px';
 @import './min_width_414px';
+@import './min_width_500px';
 
 *{
     box-sizing: border-box;
