--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -26,6 +26,7 @@
 @import './min_width_411px';
 @import './min_width_414px';
 @import './min_width_500px';
+@import './min_width_510px';
 
 *{
     box-sizing: border-box;
