imports min_width_600px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -27,6 +27,7 @@
 @import './min_width_414px';
 @import './min_width_500px';
 @import './min_width_510px';
+@import './min_width_600px';
 
 *{
     box-sizing: border-box;
