imports min_width_730px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -28,6 +28,7 @@
 @import './min_width_500px';
 @import './min_width_510px';
 @import './min_width_600px';
+@import './min_width_730px';
 
 *{
     box-sizing: border-box;
