imports min_width_740px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -29,6 +29,7 @@
 @import './min_width_510px';
 @import './min_width_600px';
 @import './min_width_730px';
+@import './min_width_740px';
 
 *{
     box-sizing: border-box;
