--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2850,6 +2850,43 @@
   }
 }
 
+/* iPad => 768 x 1024 # Vertical done,
+   iPad Mini => 768 x 1024 # Vertical done,
+   iPad Air 1 & 2 => 768 x 1024  # Vertical done*/
+@media only screen and (min-width: 760px) {
+  .light-off {
+    width: 150%;
+    height: 180vh;
+  }
+  .myname {
+    left: 390px;
+  }
+  .css-art p {
+    left: 460px;
+  }
+  .floor {
+    width: 150%;
+  }
+  .awssld, .bio-card, .contact-card {
+    top: 875px;
+    left: 120px;
+  }
+  .bio-img-container img {
+    margin: 140px auto;
+    width: 160%;
+  }
+  .project-div {
+    padding-top: 5em;
+  }
+  .text-container {
+    padding: 110px 0 20px 60px;
+    line-height: 35px;
+  }
+  iframe {
+    height: 35vh;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
