imports min_width_760px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -30,6 +30,7 @@
 @import './min_width_600px';
 @import './min_width_730px';
 @import './min_width_740px';
+@import './min_width_760px';
 
 *{
     box-sizing: border-box;
