--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2887,6 +2887,42 @@
   }
 }
 
+/* Samsung Galaxy Tab 10 => 800x 1280 # Vertical done */
+@media only screen and (min-width: 800px) {
+  .light-off {
+    height: 150vh;
+  }
+  .floor {
+    width: 150%;
+  }
+  .awssld, .bio-card, .contact-card {
+    width: 1100px !important;
+    top: 865px;
+    left: 50px;
+  }
+  .bio-img-container img {
+    margin: 100px auto;
+    width: 150%;
+  }
+  .project-div {
+    padding-top: 5em;
+  }
+  .project-div .codepen-div {
+    width: 30%;
+    height: 300px;
+  }
+  .project-div .codepen-div .middle-spot {
+    left: 100px;
+  }
+  .text-container {
+    padding: 80px 0 20px 60px;
+    line-height: 35px;
+  }
+  iframe {
+    height: 30vh;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
