--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -31,6 +31,7 @@
 @import './min_width_730px';
 @import './min_width_740px';
 @import './min_width_760px';
+@import './min_width_800px';
 
 *{
     box-sizing: border-box;
