imports min_width_812px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -32,6 +32,7 @@
 @import './min_width_740px';
 @import './min_width_760px';
 @import './min_width_800px';
+@import './min_width_812px';
 
 *{
     box-sizing: border-box;
