--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2947,6 +2947,20 @@
   }
 }
 
+/* iPhone XR => 896 x 414 # Horizontal done*/
+@media only screen and (min-width: 896px) {
+  .floor {
+    width: 135%;
+  }
+  .awssld, .bio-card, .contact-card {
+    top: 875px;
+    left: 55px;
+  }
+  iframe {
+    height: 80vh;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
