imports min_width_896px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -33,6 +33,7 @@
 @import './min_width_760px';
 @import './min_width_800px';
 @import './min_width_812px';
+@import './min_width_896px';
 
 *{
     box-sizing: border-box;
