imports min_width_1000px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -34,6 +34,7 @@
 @import './min_width_800px';
 @import './min_width_812px';
 @import './min_width_896px';
+@import './min_width_1000px';
 
 *{
     box-sizing: border-box;
