imports min_width_1280px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -35,6 +35,7 @@
 @import './min_width_812px';
 @import './min_width_896px';
 @import './min_width_1000px';
+@import './min_width_1280px';
 
 *{
     box-sizing: border-box;
