imports min_width_1336px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -36,6 +36,7 @@
 @import './min_width_896px';
 @import './min_width_1000px';
 @import './min_width_1280px';
+@import './min_width_1336px';
 
 *{
     box-sizing: border-box;
