--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -37,6 +37,7 @@
 @import './min_width_1000px';
 @import './min_width_1280px';
 @import './min_width_1336px';
+@import './min_width_1400px';
 
 *{
     box-sizing: border-box;
