imports min_width_1400px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -38,6 +38,7 @@
 @import './min_width_1280px';
 @import './min_width_1336px';
 @import './min_width_1366px';
+@import './min_width_1400px';
 
 *{
     box-sizing: border-box;
