imports min_width_1900px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -39,6 +39,7 @@
 @import './min_width_1336px';
 @import './min_width_1366px';
 @import './min_width_1400px';
+@import './min_width_1900px';
 
 *{
     box-sizing: border-box;
