imports min_width_2500px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -40,6 +40,7 @@
 @import './min_width_1366px';
 @import './min_width_1400px';
 @import './min_width_1900px';
+@import './min_width_2500px';
 
 *{
     box-sizing: border-box;
