imports min_width_2800px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -41,6 +41,7 @@
 @import './min_width_1400px';
 @import './min_width_1900px';
 @import './min_width_2500px';
+@import './min_width_2800px';
 
 *{
     box-sizing: border-box;
