imports min_width_5000px.scss

--- a/src/STYLES/style.scss
+++ b/src/STYLES/style.scss
@@ -42,6 +42,7 @@
 @import './min_width_1900px';
 @import './min_width_2500px';
 @import './min_width_2800px';
+@import './min_width_5000px';
 
 *{
     box-sizing: border-box;
