--- a/src/STYLES/_min_width_1000px.scss
+++ b/src/STYLES/_min_width_1000px.scss
@@ -1,9 +1,9 @@
 /* iPad Pro => 1024 x 1366 # Vertical done,
    iPad Air 1 & 2 => 1024 x 768 # Horizontal*/
 @media only screen and (min-width: 1000px){
-    .light-off{
-        width: 120%;
-        height: 150vh;
+    .postits{
+        top:750px;
+        left: -440px;
     }
 
     .floor{
