--- a/src/STYLES/_min_width_1000px.scss
+++ b/src/STYLES/_min_width_1000px.scss
@@ -7,13 +7,7 @@
     }
 
     .floor{
-        width: 120%;
-        height: 20vh;
-    }
-
-    .postits{
-        top:750px;
-        left: -200px;
+        width: 1200px;
     }
 
     .awssld, .bio-card, .contact-card{
