adjusts styling in min_width_1280px

--- a/src/STYLES/_min_width_1280px.scss
+++ b/src/STYLES/_min_width_1280px.scss
@@ -1,16 +1,21 @@
 /* Samsung Galaxy Tab 10 => 1280 x 800 # Horizontal done*/
 @media  only screen and (min-width: 1280px){
-    .light-off{
-        width: 120%;
-        height:220vh;
+    .light-buttons{
+        .light-off{
+            width: 1300px;
+        }
     }
 
     .css-art p{
         left:470px;
     }
 
+    .floor{
+        width: 1300px;
+    }
+
     .postits{
-        left: -120px;
+        left: -420px;
     }
 
     .window{
@@ -18,8 +23,8 @@
     }
 
     .awssld, .bio-card, .contact-card{
-        top: 845px;
-        left: 150px;
+        top:845px;
+        left: 50px;
         width: 1200px !important;
     }
 
