--- a/src/STYLES/_min_width_1336px.scss
+++ b/src/STYLES/_min_width_1336px.scss
@@ -1,16 +1,23 @@
 /* Acer Chromebook => 1336 x 768 */
 @media only screen and (min-width: 1336px){
-    .light-off{
-        height:230vh;
+    .light-buttons{
+        .light-off{
+            width: 1336px;
+        }
+    }
+
+    .floor{
+        width: 1336px;
     }
 
     .postits{
-        left: -100px;
+        left: -370px;
+        top: 770px;
     }
 
     .awssld, .bio-card, .contact-card{
-        top: 820px;
-        left: 200px;
+        top: 870px;
+        left: 70px;
     }
 
     .bio .text-container{
