--- a/src/STYLES/_min_width_1900px.scss
+++ b/src/STYLES/_min_width_1900px.scss
@@ -1,7 +1,10 @@
 /* Del XPS 13 => 1920 x 1080 done */
 @media only screen and (min-width: 1900px){
-    .light-off{
-        height: 120vh;
+    .light-buttons{
+        .light-off{
+            width: 2000px;
+            height: 1130px
+        }
     }
 
     .myname{
@@ -13,22 +16,24 @@
     }
 
     .floor{
-        height: 65vh;
+        height: 510px;
+        width: 2000px;
     }
 
     .postits{
         top: -20px;
         left: 600px;
-        &:after{
-            width: 250px;
-            height: 250px;
-        }
         p{
             padding-top: 100px;
         }
         .post-it-1, .post-it-2, .post-it-3, .post-it-4{
             width: 250px;
             height:250px;
+            left: 350px;
+            &:after{
+                width: 250px;
+                height: 250px;
+            }
         }
         .post-it-2, .post-it-4{
           left: 650px;
@@ -47,6 +52,7 @@
         top: 80px;
         left: 300px;
         width: 1210px !important;
+        height: 1000px !important;
     }
 
     .bio .text-container{
