--- a/src/STYLES/_min_width_2800px.scss
+++ b/src/STYLES/_min_width_2800px.scss
@@ -1,7 +1,10 @@
 /* Apple Macbook Pro 15-inch => 2880 x 1800 done */
 @media only screen and (min-width: 2800px){
-    .light-off{
-        height: 130vh;
+    .light-buttons{
+        .light-off{
+            width: 2880px;
+            height: 1800px;
+        }
     }
 
     .myname{
@@ -9,7 +12,7 @@
     }
 
     .css-art p{
-        top: 1150px;
+        top: 1200px;
     }
 
     .table{
@@ -88,6 +91,21 @@
         }
     }
 
+    .curtain-rope{
+        left: 295px;
+        top: 120px;
+        animation: move-up-rope-2500 3s linear;
+    }
+
+    .curtain-handle{
+        width: 40px;
+        height: 40px;
+        top:140px;
+        left: 280px;
+        border-width: 10px;
+        animation: move-up-curtain-handle-2500 3s linear;
+    }
+
     .stars{
         top: 100px;
         left: 70px;
@@ -120,9 +138,8 @@
     }
 
     .floor{
-        top:1110px;
-        width: 120%;
-        height:65vh;
+        width: 2880px;
+        height:650px;
     }
 
    .awssld, .bio-card, .contact-card{
