--- a/src/STYLES/_min_width_500px.scss
+++ b/src/STYLES/_min_width_500px.scss
@@ -1,9 +1,10 @@
 /* iPhone 5/SE => 568 x 320 # Horizontal done
    iPad Touch =>  568 x 320 # Horizontal done*/
 @media only screen and (min-width: 500px){
-    .light-off{
-      width: 240%;
-      height: 650vh;
+    .light-buttons{
+      .light-off{
+        width: 1350px;
+      }
     }
 
     .css-art p{
@@ -12,8 +13,7 @@
 
     .floor{
       top: 620px;
-      width: 240%;
-      height: 60vh;
+      width: 1350px;
     }
 
     .window{
