--- a/src/STYLES/_min_width_730px.scss
+++ b/src/STYLES/_min_width_730px.scss
@@ -1,9 +1,10 @@
 /* Pixel 2 => 731 x 411 # Horizontal done,
    iPhone 6/7/8 plus => 736 x 414 # Horizontal done*/
 @media only screen and (min-width: 730px){
-    .light-off{
-        width: 150%;
-        height: 450vh;
+    .light-buttons{
+        .light-off{
+            width: 1150px;
+        }
     }
 
     .myname{
@@ -15,7 +16,7 @@
     }
 
     .floor{
-        width: 150%;
+        width: 1150px;
     }
 
     .plant-div{
@@ -63,7 +64,7 @@
     }
 
     .postits{
-        left:-230px;
+        left:-470px;
         top:780px;
         p{
             padding-top: 180px;
@@ -98,9 +99,9 @@
 
     .awssld, .bio-card, .contact-card{
         top: 880px;
-        left: 110px;
-        width: 915px !important;
-        height: 900px !important;
+        left: 30px;
+        width: 1100px !important;
+        height: 1100px !important;
     }
 
     .bio-img-container img{
