adjusts styling in min_width_740px

--- a/src/STYLES/_min_width_740px.scss
+++ b/src/STYLES/_min_width_740px.scss
@@ -1,13 +1,11 @@
  /* Samsung Galaxy S8 / S8+ => 740 x 360 # Horizontal done,
     Samsung Galaxy S9 / S9+ => 740 x 360 # Horizontal done*/
 @media only screen and (min-width: 740px){
-    .light-off{
-        height: 490vh;
-    }
-
     .awssld, .bio-card, .contact-card{
         top: 850px;
-        left: 110px;
+        left: 30px;
+        height: 1150px !important;
+        width: 150% !important;
     }
 
     .bio-img-container img{
