--- a/src/STYLES/_min_width_812px.scss
+++ b/src/STYLES/_min_width_812px.scss
@@ -1,14 +1,15 @@
 /* iPhone XS => 812 x 375 # Horizontal done,
    iPhone X => 812 x 375 # Horizontal done,
    Pixel 2 XL => 823 x 411 # Horizontal done*/
-   @media only screen and (min-width: 812px){
-    .light-off{
-        height: 500vh;
+@media only screen and (min-width: 812px){
+    .postits{
+        top: 750px;
+        left: -445px;
     }
 
     .awssld, .bio-card, .contact-card{
-        top: 875px;
-        left: 50px;
+        top: 845px;
+        left: 45px;
     }
 
     .codepen-div{
